# gdelt-primer

./: .gitignore  fields.txt
backfill/: Justfile  backfill.py  dummy.py  requirements.txt  setup.cfg
backfill/src/gmloader/: cli.py  db.py  master.py  mongoimport.py
realm/functions/: insertCSVRows.js  updateGDELT.js
