[metadata]
name = gdelt-mongodb-loader
version = 0.0.0

[options]
packages = find:
package_dir =
    =src
install_requires = 
    requests == 2.27.1
    click == 8.1.1
    pymongo[srv] == 4.0.2
    arrow == 1.2.2

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    gmloader = gmloader.cli:main